# Doppelkopf

./: CMakeLists.txt  Readme.md
Doppelkopf2/: main.cpp
Doppelkopf2.xcodeproj/: project.pbxproj
Doppelkopf2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Doppelkopf2.xcodeproj/xcuserdata/maikel.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/: CMakeLists.txt  ai_client.cpp  server.cpp
src/doko/: Action.cpp  Action.hpp  GameRules.cpp  GameRules.hpp  StaticVector.hpp  UctTreeSearch.hpp  card_assignment.cpp  card_assignment.hpp  game_rules.cpp  game_rules.hpp  random.hpp  static_vector.hpp  uct_tree.hpp
src/doko/net/: ai_client.cpp  ai_client.hpp  asio.hpp  json.cpp  json.hpp  server.cpp  server.hpp
src/fub/core/: assert.hpp  mdspan.hpp  pragma.hpp  span.hpp
tests/: CMakeLists.txt  StaticVector_test.cpp  card_assignment.cpp  game_rules.cpp  main.cpp  static_vector.cpp  uct_tree.cpp
web/doppelkopf/: package-lock.json  package.json
web/doppelkopf/src/: App.js  Connecting.css  Connecting.js  Hand.css  Hand.js  Lobby.css  Lobby.js  Table.css  Table.js  Trick.css  Trick.js
